Issue #TG-46: Upgrade to JDK 11 spike